test/ci/front-end/fail/tuple.t
  $ dune exec -- raven --shh ./tuple.rav
  [Error] File "./tuple.rav", line 7, columns 20-22:
  7 |     var zz: Int := x#2;
                          ^^
  Type Error: Index out of bounds.
  [1]
